dashboards/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  externalName: hub.progamesigner.net
  ports:
  - name: https
    port: 443
    targetPort: 8123
  type: ExternalName
