dashboards/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: postgresql
  name: pgadmin
spec:
  ingressClassName: internal-ingress
  rules:
  - host: postgresql.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - postgresql.progamesigner.dev
    secretName: tls-dev-progamesigner
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.progamesigner.io/hostname: mariadb,mysql
  name: phpmyadmin
spec:
  ingressClassName: internal-ingress
  rules:
  - host: mariadb.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin
            port:
              name: http
        path: /
        pathType: Prefix
  - host: mysql.progamesigner.dev
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mariadb.progamesigner.dev
    - mysql.progamesigner.dev
    secretName: tls-dev-progamesigner
